# ChangeLog for net-im/bitlbee
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.130 2010/10/28 20:34:11 wired Exp $

  28 Oct 2010; Alex Alexander <wired@gentoo.org> -bitlbee-1.2.4.ebuild,
  -bitlbee-1.2.4-r1.ebuild, -bitlbee-1.2.6a.ebuild, -bitlbee-1.2.7.ebuild:
  removed old versions

*bitlbee-3.0 (28 Oct 2010)

  28 Oct 2010; Tim Harder <radhermit@gentoo.org> +bitlbee-3.0.ebuild,
  +files/bitlbee-3.0-configure.patch, +files/bitlbee-3.0-jabber.patch,
  metadata.xml:
  Version bump (thanks to wired for helping). This version adds support for
  file transfers, OTR encryption, plugins, optional libpurple support, event
  handling using libevent, and many other updates. Added myself to the
  maintainer list.

*bitlbee-1.2.8 (08 Sep 2010)

  08 Sep 2010; Alex Alexander <wired@gentoo.org> +bitlbee-1.2.8.ebuild,
  metadata.xml:
  version bump, EAPI 3, bug #327851. added myself as maintainer.

  10 Aug 2010; Markos Chandras <hwoarang@gentoo.org> bitlbee-1.2.7.ebuild:
  Respect LDFLAGS. Bug #331845. Thanks to Diego E. 'Flameeyes' Pettenò
  <flameeyes@gentoo.org> for reporting

*bitlbee-1.2.7 (19 May 2010)

  19 May 2010; Cédric Krier <cedk@gentoo.org> +bitlbee-1.2.7.ebuild:
  Version bump

*bitlbee-1.2.6a (29 Apr 2010)

  29 Apr 2010; Cédric Krier <cedk@gentoo.org> +bitlbee-1.2.6a.ebuild,
  metadata.xml:
  Version bump and add twitter USE flag

  04 Mar 2010; Cédric Krier <cedk@gentoo.org> files/bitlbee.confd,
  files/bitlbee.initd:
  Fix bitlbee initd script

*bitlbee-1.2.4-r1 (28 Feb 2010)

  28 Feb 2010; Cédric Krier <cedk@gentoo.org> +bitlbee-1.2.4-r1.ebuild,
  +files/bitlbee.confd, +files/bitlbee.initd:
  Replace bitlbeed init script with bitlbee for bug #301082

*bitlbee-1.2.4 (15 Nov 2009)

  15 Nov 2009; Cédric Krier <cedk@gentoo.org> +bitlbee-1.2.4.ebuild:
  Version bump

  01 Nov 2008; nixnut <nixnut@gentoo.org> bitlbee-1.2.3-r1.ebuild:
  Stable on ppc wrt bug 244533
